--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -14,6 +14,7 @@
 .maintweet-footer {
   /*Add space between text area, and button/charachter count*/
   padding-top: 1.0em;
+  padding-bottom: 1.0em;
   display: flex;
   /*Center the items along the cross axis*/
   align-items: center;
@@ -27,3 +28,18 @@
   background-color: #3b63ea;
 }
 
+.error-message-container {
+  background-color: #c51244;
+  height: 2.5em;
+  display: flex;
+  justify-content: center;
+}
+
+.fa-solid.fa-triangle-exclamation {
+  padding: 0.7em;
+  color:white;
+}
+
+.error-message-text {
+  color: white;
+}
