Adjusted styles to deal wit change in view, application will be in mobile format until 1024 pixels is reached, than the layout expands with the header being floated to the left and the compose tweet and tweet timeline being put in a column and floated to the right

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,6 @@
 /* Target the header that specifically belongs to the body, intended for backdrop of profile picture! */
 #profile-header {
+  padding-top: 1em;
   display: flex;
   height: 400px;
   width: 100%;
