--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,5 +30,23 @@ main {
 }
 
 /*
- * Additional CSS can be defined below or in other CSS files, as per instructions
+ * Media Queries for various screen sizes, if on desktop!
  */
+
+ @media only screen and (min-width: 1024px) {
+  .container {
+    padding-top: 4em;
+    padding-right: 2em;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    float: right;
+  }
+  .profile-header-for-desktop {
+    padding-top: 4em;
+    padding-left: 2em;
+    width: 40%;
+    float: left;
+
+  }
+ }
