--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,3 +1,5 @@
+/*This document provides styles to the general layout of the document,
+also media queries for mobile versus desktop!*/
 /*
  * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
  * https://css-tricks.com/international-box-sizing-awareness-day/
