--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,3 +1,5 @@
+/*This document provides styles for the naviagation bar at the top of the web app*/
+
 nav.navbar-top {
   /*Box Model Properties*/
   color: #ffffff;
