Added some final changes to the project, a scroll bar in tweet container for individual tweets when desktop screen size shrinks, as well as reduced font weight on body in order to allow strong WRITE in top right corner to appear bolded

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,9 +4,9 @@ nav.navbar-top {
   /*Box Model Properties*/
   color: #ffffff;
   background-color: #3b63ea;
-  font-size: 30px;
-  font-family: "Source Sans Pro";
-  font-weight: 600;
+  /* font-size: 30px; */
+  /* font-family: "Source Sans Pro"; */
+  /* font-weight: 600; */
   height: 120px;
   width: 100vw;
   padding-right: 1.5em;
